2016-01-31	A bit more refactoring.

		share/biting-pear/calm.ccc :
		- restructured code for invoking cc1plus and echoing command
		  line arguments

2016-01-27	Slightly better documentation.

		README.md :
		- added some installation instructions

2016-01-24	A bit of refactoring.

		GNUmakefile ,
		bin/biting-pear-c++.ccc ,
		share/biting-pear/calm.ccc :
		- factored out shocked(.) and curious(...) to share/biting-
		  pear/epic.cc

		share/biting-pear/epic.cc :
		- initial version; split from share/biting-pear/calm.ccc

2016-01-23	Nice wrapper.

		.gitignore :
		- added *.ii and calm, removed nomnom

		GNUmakefile :
		- updated to build and use wrapper
		- now preprocesses to .ii files instead of .i files
		- now builds internal passes from share/biting-pear/ rather
		  than libexec/biting-pear/
		- $(config.h.host) and $(config.h.target) now depend on
		  config.cache
		- now defines biting_pear::impl::getenv(.) in $(config.h.host)
		- fixed installation of host files

		bin/biting-pear-c++.ccc ,
		share/biting-pear/calm.ccc ,
		share/biting-pear/calm.spec :
		- initial version

		configure :
		- now probes for secure_getenv(.)

		share/biting-pear/doge.ccc :
		- moved from libexec/biting-pear/doge.ccc

		share/biting-pear/nomnom.cc :
		- moved from libexec/biting-pear/nomnom.cc
		- is now a module (used by calm.ccc) rather than a
		  stand-alone program

		share/biting-pear/omnomnom.lxx :
		- moved from libexec/biting-pear/omnomnom.lxx
		- now uses a default seed if no seed is specified, rather
		  than a (half-baked) random seed

		include/biting-pear/omg.h ,
		lolwutconf/configure.inc :
		- minor fixes

2016-01-09	Touch-ups.

		GNUmakefile :
		- now uses $conf_Host_exec when running $CXX_FOR_TARGET
		- changed handling of target-side wchar_t
		- `make clean' no longer zaps config.cache
		- fixed bug in #define of biting_pear_decltype

		configure :
		- now looks for mbrtoc16(...) and mbrtoc32(...) in
		  <cuchar> and <uchar.h>
