@@ -1,3 +1,8 @@
+2016-02-03	Yet another type of indirect jump.
+
+		include/biting-pear/omg.h :
+		- added far returns
+
 2016-01-31	A bit more refactoring.
 
 		share/biting-pear/calm.ccc :
